language/move-lang/tests/move_check/translated_ir_tests/signer/invalid_move_to_sender.move
module M {
    fun t(s: signer) {
        move_to_sender<signer>(move s)
    }
}

module N {
    resource struct R { s: signer }
    fun t(s: signer) {
        move_to_sender<R>(move s);
    }
}
